--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,4 +19,18 @@
         android:layout_marginBottom="356dp"
         android:scaleType="fitCenter"
         android:src="@drawable/launch_screen" />
+</RelativeLayout> -->
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:background="#FFFFFF"
+    android:layout_height="match_parent" >
+
+    <ImageView android:id="@+id/imageView1"
+        android:layout_width="200dp"
+        android:layout_height="300dp"
+        android:src="@drawable/launch_screen"
+        android:scaleType="centerInside"
+        android:layout_centerInParent="true" />
+
 </RelativeLayout>
