--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -27,9 +27,9 @@
     android:layout_height="match_parent" >
 
     <ImageView android:id="@+id/imageView1"
-        android:layout_width="200dp"
-        android:layout_height="300dp"
-        android:src="@drawable/launch_screen"
+        android:layout_width="3000dp"
+        android:layout_height="250dp"
+        android:src="@drawable/launch_screen_new"
         android:scaleType="centerInside"
         android:layout_centerInParent="true" />
 
